--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="container">
     <h1>Operações com Data em JavaScript</h1>
+    <div class="input">
+      <form>
+        <label for="dataInput">Data: </label>
+        <input type="date" id="dataInput" name="dataInput">
+        <button type="button" onclick="mostrarResultados()">carregar</button>
+      </form>
+    </div>
     <div class="output">
       <p id="outputText"></p>
       <ul>
