--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css"> 
   <title>Operações com Data em JavaScript</title> 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
 <body>
   <div class="container">
-    <h1>Operações com Data em JavaScript</h1>
-    <div class="input">
-      <form>
-        <label for="dataInput">Data: </label>
-        <input type="date" id="dataInput" name="dataInput">
-        <button id="carregar" class="mostrar desligado" type="button" onclick="recebeData()"><i class="fas fa-calendar"></i> Carregar</button>
-        <button id="aumentar" class="esconder" type="button" onclick="aumentaData()"><i class="fas fa-chevron-up"></i></button>
-        <button id="diminuir" class="esconder" type="button" onclick="diminuiData()"><i class="fas fa-chevron-down"></i></button>
+    <h1>Operações com Data<br>em JavaScript</h1>
+    <div>
+      <form class="formulario">
+          <label for="dataInput">Data: </label>
+          <input type="date" id="dataInput" name="dataInput">
+          <button id="carregar" class="mostrar desligado" type="button" onclick="recebeData()"><i class="fa-regular fa-calendar-days"></i>&nbsp;<span>Carregar</span></button>
+          <button id="aumentar" class="esconder" type="button" onclick="aumentaData()"><i class="fas fa-chevron-up"></i></button>
+          <button id="diminuir" class="esconder" type="button" onclick="diminuiData()"><i class="fas fa-chevron-down"></i></button>
+
       </form>
     </div>    
-    <div>
-      <p id="outputText"></p>
-      <ul class="output">
+    <div class="secao-dois">
+      <figure>
+        <img src="calendario-1.png" alt="">
+        <figcaption></figcaption>
+      </figure>
+      <ul id="outPut" class="outPut">
         <li><span id="qualSemana"></span></li>
         <li><span id="quantosDias"></span></li>
         <li><span id="anoBisexto"></span></li>
